# invenio-override

./: .gitignore  CHANGES.rst  MANIFEST.in  README.md  invenio.cfg.example  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
invenio_override/: config.py  ext.py  views.py  webpack.py
invenio_override/assets/semantic-ui/js/invenio_override/: CommunitiesResults.js  UploadsResults.js  theme.js
invenio_override/assets/semantic-ui/js/invenio_override/communities/: CommunityCards.js  index.js
invenio_override/assets/semantic-ui/js/invenio_override/dashboard/: DashboardOverview.js  index.js
invenio_override/assets/semantic-ui/less/invenio_override/: accounts.less  admin.less  communities.less  dashboard.less  deposit.less  footer.less  frontpage.less  header.less  login.less  macros.less  overrides.less  record.less  search.less  theme.less  variables.less
invenio_override/assets/semantic-ui/translations/invenio_override/: i18next.js
invenio_override/assets/semantic-ui/translations/invenio_override/messages/de/: translations.json
invenio_override/assets/semantic-ui/translations/invenio_override/messages/en/: translations.json
invenio_override/templates/invenio_override/: 423.html  base.html  benefits.html  comingsoon.html  communities_frontpage.html  contact_us.html  footer.html  footer_mug.html  frontpage.html  frontpage_reasons.html  header.html  header_frontpage.html  navbar.html  overview.html  recent_uploads.html  resource_overview.html  search.html
invenio_override/templates/invenio_override/accounts/: accounts_base.html  header_login.html  login_user.html  register_user.html
invenio_override/templates/invenio_override/macros/: authors.html
invenio_override/templates/semantic-ui/invenio_administration/: base.html
invenio_override/templates/semantic-ui/invenio_app_rdm/help/: search.de.html  search.en.html
invenio_override/templates/semantic-ui/invenio_app_rdm/records/: deposit.html
invenio_override/templates/semantic-ui/invenio_app_rdm/users/: base.html  communities.html  requests.html  uploads.html
invenio_override/templates/semantic-ui/invenio_theme/: page_settings.html
invenio_override/templates/semantic-ui/invenio_theme/macros/: messages.html
invenio_override/translations/: messages.pot
invenio_override/translations/de/LC_MESSAGES/: messages.mo  messages.po
invenio_override/translations/en/LC_MESSAGES/: messages.mo  messages.po
tests/: test_invenio_override.py
