# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2023 Graz University of Technology.
# Copyright (C) 2026 Graz University of Technology.
#
# invenio-override is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-override
version = attr: invenio_override.__version__
description = "Invenio module for sharedRDM theme."
long_description = file: README.rst, CHANGES.rst
keywords = invenio sharedRDM
license = MIT
author = "Graz University of Technology"
author_email = mojib.wali@tugraz.at
url = https://github.com/tu-graz-library/invenio-override
platforms = any
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.14
    Development Status :: 3 - Alpha


[options]
include_package_data = True
packages = find:
python_requires = >=3.14
zip_safe = False
install_requires =
    opensearch-dsl>=2.0.0,<3.0.0
    opensearch-py>=2.0.0,<3.0.0
    invenio-global-search>=0.3.0
    invenio-rdm-records
    invenio-records-global-search>=0.3.5

[options.extras_require]
lom =
    invenio-global-search[lom]>=0.3.0
marc21 =
    invenio-global-search[marc21]>=0.3.0
tests =
    invenio-app>=3.0.0,<4.0.0
    invenio-previewer>=2.2.0
    pytest-black>=0.6.0
    invenio-global-search[lom, marc21]>=0.3.0
    pytest-invenio>=3.3.0,<4.0.0
    sphinx>=4.5.0
    setuptools <82
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0
    
[options.entry_points]
invenio_base.apps =
    invenio_override = invenio_override:InvenioOverride
invenio_base.blueprints =
    invenio_override = invenio_override.views:blueprint
invenio_i18n.translations =
    messages = invenio_override
invenio_assets.webpack =
    invenio_override_theme = invenio_override.webpack:theme
invenio_config.module =
    invenio_override = invenio_override.config
invenio_base.finalize_app =
    invenio_override = invenio_override.ext:finalize_app

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_override/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = sharedRDM
msgid_bugs_address = mojib.wali@tugraz.at
mapping-file = babel.ini
output-file = invenio_override/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_override/translations/messages.pot
output-dir = invenio_override/translations/

[update_catalog]
input-file = invenio_override/translations/messages.pot
output-dir = invenio_override/translations/
[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_override --cov-report=term-missing tests invenio_override
testpaths = tests invenio_override
live_server_scope = module
